RESOLVED FIXED96651
[BlackBerry] Page Popup for Month is non-functional.
https://bugs.webkit.org/show_bug.cgi?id=96651
Summary [BlackBerry] Page Popup for Month is non-functional.
jecao
Reported 2012-09-13 07:38:18 PDT
<input type=month> is completely non-functional. It behaves like it is requesting a dialog, but no dialog appears. Likely this is missing an implementation for the type and the fail over isn't handled well.
Attachments
Patch (2.51 KB, patch)
2012-09-13 07:54 PDT, jecao
no flags
Patch (2.51 KB, patch)
2012-09-13 08:13 PDT, jecao
no flags
Patch (2.50 KB, patch)
2012-09-13 08:22 PDT, jecao
no flags
Patch (2.49 KB, patch)
2012-09-13 08:26 PDT, jecao
no flags
jecao
Comment 1 2012-09-13 07:54:36 PDT
Mike Fenton
Comment 2 2012-09-13 08:10:42 PDT
Comment on attachment 163876 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=163876&action=review > Source/WebKit/blackberry/WebCoreSupport/DatePickerClient.cpp:77 > + source.append("window.popupcontrol.show(\"Month\", "); This should be appendLiteral.
jecao
Comment 3 2012-09-13 08:13:49 PDT
Rob Buis
Comment 4 2012-09-13 08:15:10 PDT
Comment on attachment 163878 [details] Patch LGTM.
WebKit Review Bot
Comment 5 2012-09-13 08:17:45 PDT
Comment on attachment 163878 [details] Patch Rejecting attachment 163878 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 Chris Hutten-Czapski found in /mnt/git/webkit-commit-queue/Source/WebKit/blackberry/ChangeLog does not appear to be a valid reviewer according to committers.py. ERROR: /mnt/git/webkit-commit-queue/Source/WebKit/blackberry/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output: http://queues.webkit.org/results/13852049
jecao
Comment 6 2012-09-13 08:22:12 PDT
jecao
Comment 7 2012-09-13 08:26:16 PDT
Rob Buis
Comment 8 2012-09-13 08:27:20 PDT
Comment on attachment 163882 [details] Patch LGTM.
WebKit Review Bot
Comment 9 2012-09-13 09:01:23 PDT
Comment on attachment 163882 [details] Patch Clearing flags on attachment: 163882 Committed r128471: <http://trac.webkit.org/changeset/128471>
WebKit Review Bot
Comment 10 2012-09-13 09:01:27 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.