[BlackBerry] Page Popup for Month is non-functional. https://bugs.webkit.org/show_bug.cgi?id=96651

Patch by Jessica Cao <jecao@rim.com> on 2012-09-13
Reviewed by Rob Buis.

Hook up support for Month popup.

* WebCoreSupport/DatePickerClient.cpp:
(WebCore::DatePickerClient::generateHTML):
* WebKitSupport/InputHandler.cpp:
(BlackBerry::WebKit::InputHandler::openDatePopup):

Canonical link: https://commits.webkit.org/114557@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@128471 268f45cc-cd09-0410-ab3c-d52691b4dbfc